--- a/ResourcesWpf/ResourcesWpf.csproj
+++ b/ResourcesWpf/ResourcesWpf.csproj
@@ -7,4 +7,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>  
+	  <Resource Include="**\*.png;**\*.ico;"/>
+  </ItemGroup>
+
 </Project>
